--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
     "lib-flexible": "^0.3.2",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
