--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "eruda": "^1.5.4",
     "lib-flexible": "^0.3.2",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
